# prueba_zebra

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  server.py
.claude/: settings.local.json
examples/: example_output.json  scenarios.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  style.css
frontend/src/components/: DomainAnalysisTab.vue  ExecuteForm.vue  ExecutionHistory.vue  ProgressTracker.vue  ResultViewer.vue  ReviewTab.vue  RiskTab.vue  SolutionTab.vue  TracesTab.vue
frontend/src/stores/: pipeline.ts
src/: config.py  llm.py  models.py  observability.py  orchestrator.py
src/agents/: architect.py  base.py  decomposer.py  domain_expert.py  reviewer.py  risk_analyst.py
src/api/: app.py  routes.py  schemas.py  websocket.py
src/db/: cache.py  connection.py  models.py  repository.py
tests/: test_agents.py  test_llm.py  test_models.py  test_orchestrator.py
